<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_Ctrl_SIf_PTS_Cfg" Id="{283cb9b3-dba3-4af6-a60f-c02506c0ae38}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_PTS_Cfg :
STRUCT
	/// Turns the barcode reader intelligence on. This makes the PTS nearly self sustained. 
	bolBarcodeReaderAvailable: BOOL;
	/// If there is no barcode but a sensor at the end of the entry belt 
	bolEntrySensorAvailable: BOOL;
	/// Paper Input and Ouput Positions for the fixed modes
	aFixPosDef: ARRAY[0..(E_PTS_MODE.MAX_E_PTS_MODE - 1)] OF T_PTS_InOutPositions;
	/// Automatic Mode Input and Output Positions
	aAutoPosDef: ARRAY[0..(cPTS_MAX_AUTOPOS - 1)] OF T_PTS_InOutPositions;
	/// Automatic Mode Default Input Positions
	aDefaultAutoPos: UINT;
	/// Paper Input and Ouput Positions for the fixed modes
	aDistributionPositionDefinition: ARRAY[0..(PTS_CmdState.cPTS_MAX_DISTRIBUTION - 1)] OF E_PTS_MODE;
	/// Start positioning the malteser wheel before turning
	bolPositionMalteserEnable: BOOL;
	/// Use Servo Axis instead of Malteser for turning
	bolRaxEnable: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>