<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_PTS_CTRL" Id="{908260a1-8597-4043-8962-82955516248a}">
    <Declaration><![CDATA[TYPE T_PTS_CTRL :
STRUCT
	fbPts_RAX_POD		: FB_POD;
	fbPts_RAX			: FB_RAX;
	fbPts_Ptb			: FB_PTB;
	fbPts_Ptb_Umc		: FB_UMC;
	fbPts_Ptb_Vpc		: FB_VPC;
	fbPts_Mdc_Umc		: FB_UMC;
	fbPts_Mdc			: FB_MDC;
	fbPts				: FB_PTS;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>